--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,3 @@
 Flask==2.2.3
 gunicorn==20.1.0
-echo "flask-sqlalchemy==3.0.5" >> requirements.txtgit add requirements.txt
-git commit -m "Add flask-sqlalchemy to requirements"
-git push
+echo "flask-sqlalchemy==3.0.5" >> requirements.txt
